Add config to camera data frame export, and batch all output for georef_semantics.

--- a/notebooks/export_camera_data_frame.ipynb
+++ b/notebooks/export_camera_data_frame.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 33,
    "id": "733d0d25-2667-4e4e-a659-69482edd1054",
    "metadata": {
     "scrolled": true
@@ -12,17 +12,44 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\u001b[32m2024-10-16 07:23:33.675\u001b[0m | \u001b[31m\u001b[1mERROR   \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mmain\u001b[0m:\u001b[36m118\u001b[0m - \u001b[31m\u001b[1mbackend already has a loaded project\u001b[0m\n",
-      "\u001b[32m2024-10-16 07:23:33.990\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mexport_cameras_data_frame\u001b[0m:\u001b[36m86\u001b[0m - \u001b[1m\u001b[0m\n",
-      "\u001b[32m2024-10-16 07:23:33.991\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mexport_cameras_data_frame\u001b[0m:\u001b[36m87\u001b[0m - \u001b[1mShape:   (4586, 21)\u001b[0m\n",
-      "\u001b[32m2024-10-16 07:23:33.991\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mexport_cameras_data_frame\u001b[0m:\u001b[36m88\u001b[0m - \u001b[1mColumns: ['camera_key', 'camera_label', 'longitude', 'latitude', 'height', 'yaw', 'pitch', 'roll', 'altitude', 'backscatter', 'cdom', 'chlorophyll', 'conductivity', 'depth', 'exposure', 'exposure_logged', 'salinity', 'temperature', 'timestamp', 'trigger_time', 'negative_height']\u001b[0m\n",
-      "\u001b[32m2024-10-16 07:23:33.991\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mexport_cameras_data_frame\u001b[0m:\u001b[36m89\u001b[0m - \u001b[1m\u001b[0m\n",
-      "\u001b[32m2024-10-16 07:23:33.993\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mexport_cameras_data_frame\u001b[0m:\u001b[36m94\u001b[0m - \u001b[1mWrote processed cameras: /data/kingston_snv_01/georef_semantics_test/r23685bc_20120530_233021_aligned_cameras.csv\u001b[0m\n"
+      "\u001b[32m2024-10-18 11:45:02.617\u001b[0m | \u001b[31m\u001b[1mERROR   \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mmain\u001b[0m:\u001b[36m191\u001b[0m - \u001b[31m\u001b[1mbackend already has a loaded project\u001b[0m\n",
+      "\u001b[32m2024-10-18 11:45:02.975\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mexport_cameras_data_frame\u001b[0m:\u001b[36m145\u001b[0m - \u001b[1m\u001b[0m\n",
+      "\u001b[32m2024-10-18 11:45:02.976\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mexport_cameras_data_frame\u001b[0m:\u001b[36m146\u001b[0m - \u001b[1mShape:   (2501, 22)\u001b[0m\n",
+      "\u001b[32m2024-10-18 11:45:02.976\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mexport_cameras_data_frame\u001b[0m:\u001b[36m147\u001b[0m - \u001b[1mColumns: ['camera_key', 'camera_label', 'longitude', 'latitude', 'height', 'yaw', 'pitch', 'roll', 'altitude', 'backscatter', 'cdom', 'chlorophyll', 'conductivity', 'depth', 'exposure', 'exposure_logged', 'salinity', 'temperature', 'timestamp', 'trigger_time', 'negative_height', 'image_path']\u001b[0m\n",
+      "\u001b[32m2024-10-18 11:45:02.976\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mexport_cameras_data_frame\u001b[0m:\u001b[36m148\u001b[0m - \u001b[1m\u001b[0m\n",
+      "\u001b[32m2024-10-18 11:45:02.977\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mexport_cameras_data_frame\u001b[0m:\u001b[36m153\u001b[0m - \u001b[1mWrote processed cameras: /data/kingston_snv_01/georef_semantics_test/r23685bc_20100605_021022_cameras_grayworld.csv\u001b[0m\n",
+      "\u001b[32m2024-10-18 11:45:03.431\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mexport_cameras_data_frame\u001b[0m:\u001b[36m145\u001b[0m - \u001b[1m\u001b[0m\n",
+      "\u001b[32m2024-10-18 11:45:03.431\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mexport_cameras_data_frame\u001b[0m:\u001b[36m146\u001b[0m - \u001b[1mShape:   (2501, 22)\u001b[0m\n",
+      "\u001b[32m2024-10-18 11:45:03.432\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mexport_cameras_data_frame\u001b[0m:\u001b[36m147\u001b[0m - \u001b[1mColumns: ['camera_key', 'camera_label', 'longitude', 'latitude', 'height', 'yaw', 'pitch', 'roll', 'altitude', 'backscatter', 'cdom', 'chlorophyll', 'conductivity', 'depth', 'exposure', 'exposure_logged', 'salinity', 'temperature', 'timestamp', 'trigger_time', 'negative_height', 'image_path']\u001b[0m\n",
+      "\u001b[32m2024-10-18 11:45:03.432\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mexport_cameras_data_frame\u001b[0m:\u001b[36m148\u001b[0m - \u001b[1m\u001b[0m\n",
+      "\u001b[32m2024-10-18 11:45:03.433\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mexport_cameras_data_frame\u001b[0m:\u001b[36m153\u001b[0m - \u001b[1mWrote processed cameras: /data/kingston_snv_01/georef_semantics_test/r23685bc_20100605_021022_cameras_debayered.csv\u001b[0m\n",
+      "\u001b[32m2024-10-18 11:45:03.771\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mexport_cameras_data_frame\u001b[0m:\u001b[36m145\u001b[0m - \u001b[1m\u001b[0m\n",
+      "\u001b[32m2024-10-18 11:45:03.772\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mexport_cameras_data_frame\u001b[0m:\u001b[36m146\u001b[0m - \u001b[1mShape:   (2293, 22)\u001b[0m\n",
+      "\u001b[32m2024-10-18 11:45:03.772\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mexport_cameras_data_frame\u001b[0m:\u001b[36m147\u001b[0m - \u001b[1mColumns: ['camera_key', 'camera_label', 'longitude', 'latitude', 'height', 'yaw', 'pitch', 'roll', 'altitude', 'backscatter', 'cdom', 'chlorophyll', 'conductivity', 'depth', 'exposure', 'exposure_logged', 'salinity', 'temperature', 'timestamp', 'trigger_time', 'negative_height', 'image_path']\u001b[0m\n",
+      "\u001b[32m2024-10-18 11:45:03.772\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mexport_cameras_data_frame\u001b[0m:\u001b[36m148\u001b[0m - \u001b[1m\u001b[0m\n",
+      "\u001b[32m2024-10-18 11:45:03.774\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mexport_cameras_data_frame\u001b[0m:\u001b[36m153\u001b[0m - \u001b[1mWrote processed cameras: /data/kingston_snv_01/georef_semantics_test/r23685bc_20120530_233021_cameras_grayworld.csv\u001b[0m\n",
+      "\u001b[32m2024-10-18 11:45:04.111\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mexport_cameras_data_frame\u001b[0m:\u001b[36m145\u001b[0m - \u001b[1m\u001b[0m\n",
+      "\u001b[32m2024-10-18 11:45:04.112\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mexport_cameras_data_frame\u001b[0m:\u001b[36m146\u001b[0m - \u001b[1mShape:   (2293, 22)\u001b[0m\n",
+      "\u001b[32m2024-10-18 11:45:04.112\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mexport_cameras_data_frame\u001b[0m:\u001b[36m147\u001b[0m - \u001b[1mColumns: ['camera_key', 'camera_label', 'longitude', 'latitude', 'height', 'yaw', 'pitch', 'roll', 'altitude', 'backscatter', 'cdom', 'chlorophyll', 'conductivity', 'depth', 'exposure', 'exposure_logged', 'salinity', 'temperature', 'timestamp', 'trigger_time', 'negative_height', 'image_path']\u001b[0m\n",
+      "\u001b[32m2024-10-18 11:45:04.112\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mexport_cameras_data_frame\u001b[0m:\u001b[36m148\u001b[0m - \u001b[1m\u001b[0m\n",
+      "\u001b[32m2024-10-18 11:45:04.114\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mexport_cameras_data_frame\u001b[0m:\u001b[36m153\u001b[0m - \u001b[1mWrote processed cameras: /data/kingston_snv_01/georef_semantics_test/r23685bc_20120530_233021_cameras_debayered.csv\u001b[0m\n",
+      "\u001b[32m2024-10-18 11:45:04.504\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mexport_cameras_data_frame\u001b[0m:\u001b[36m145\u001b[0m - \u001b[1m\u001b[0m\n",
+      "\u001b[32m2024-10-18 11:45:04.504\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mexport_cameras_data_frame\u001b[0m:\u001b[36m146\u001b[0m - \u001b[1mShape:   (2218, 22)\u001b[0m\n",
+      "\u001b[32m2024-10-18 11:45:04.504\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mexport_cameras_data_frame\u001b[0m:\u001b[36m147\u001b[0m - \u001b[1mColumns: ['camera_key', 'camera_label', 'longitude', 'latitude', 'height', 'yaw', 'pitch', 'roll', 'altitude', 'backscatter', 'cdom', 'chlorophyll', 'conductivity', 'depth', 'exposure', 'exposure_logged', 'salinity', 'temperature', 'timestamp', 'trigger_time', 'negative_height', 'image_path']\u001b[0m\n",
+      "\u001b[32m2024-10-18 11:45:04.505\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mexport_cameras_data_frame\u001b[0m:\u001b[36m148\u001b[0m - \u001b[1m\u001b[0m\n",
+      "\u001b[32m2024-10-18 11:45:04.506\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mexport_cameras_data_frame\u001b[0m:\u001b[36m153\u001b[0m - \u001b[1mWrote processed cameras: /data/kingston_snv_01/georef_semantics_test/r23685bc_20140616_225022_cameras_grayworld.csv\u001b[0m\n",
+      "\u001b[32m2024-10-18 11:45:04.801\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mexport_cameras_data_frame\u001b[0m:\u001b[36m145\u001b[0m - \u001b[1m\u001b[0m\n",
+      "\u001b[32m2024-10-18 11:45:04.802\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mexport_cameras_data_frame\u001b[0m:\u001b[36m146\u001b[0m - \u001b[1mShape:   (2218, 22)\u001b[0m\n",
+      "\u001b[32m2024-10-18 11:45:04.802\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mexport_cameras_data_frame\u001b[0m:\u001b[36m147\u001b[0m - \u001b[1mColumns: ['camera_key', 'camera_label', 'longitude', 'latitude', 'height', 'yaw', 'pitch', 'roll', 'altitude', 'backscatter', 'cdom', 'chlorophyll', 'conductivity', 'depth', 'exposure', 'exposure_logged', 'salinity', 'temperature', 'timestamp', 'trigger_time', 'negative_height', 'image_path']\u001b[0m\n",
+      "\u001b[32m2024-10-18 11:45:04.802\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mexport_cameras_data_frame\u001b[0m:\u001b[36m148\u001b[0m - \u001b[1m\u001b[0m\n",
+      "\u001b[32m2024-10-18 11:45:04.804\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mexport_cameras_data_frame\u001b[0m:\u001b[36m153\u001b[0m - \u001b[1mWrote processed cameras: /data/kingston_snv_01/georef_semantics_test/r23685bc_20140616_225022_cameras_debayered.csv\u001b[0m\n"
      ]
     }
    ],
    "source": [
+    "from dataclasses import dataclass\n",
     "from pathlib import Path\n",
+    "from typing import Optional\n",
     "\n",
     "import polars as pl\n",
     "\n",
@@ -36,6 +63,9 @@
     "\n",
     "\n",
     "CameraGroupID = CameraGroup.Identifier\n",
+    "\n",
+    "\n",
+    "\n",
     "\n",
     "\n",
     "def tabulate_camera_identifiers(\n",
@@ -98,7 +128,15 @@
     "    return pl.DataFrame(entries)\n",
     "\n",
     "\n",
-    "def process_camera_data(cameras: CameraGroup) -> pl.DataFrame:\n",
+    "@dataclass\n",
+    "class Config:\n",
+    "\n",
+    "    target: str\n",
+    "    destination: Path\n",
+    "    extension: str\n",
+    "    \n",
+    "\n",
+    "def process_camera_data(cameras: CameraGroup, config: Config) -> pl.DataFrame:\n",
     "    \"\"\"Process camera data from various sources.\"\"\"\n",
     "\n",
     "    data_frames: dict[str, pl.DataFrame] = {\n",
@@ -119,29 +157,46 @@
     "            right, how=\"left\", on=[\"camera_key\", \"camera_label\"]\n",
     "        )\n",
     "\n",
+    "    cameras: pl.DataFrame = left\n",
+    "\n",
     "    # TODO: Add some fancy interpolation with reference priors\n",
-    "    merged: pl.DataFrame = left.sort(by=\"timestamp\")\n",
-    "    merged: pl.DataFrame = merged.with_columns(\n",
+    "    cameras: pl.DataFrame = cameras.sort(by=\"timestamp\")\n",
+    "    cameras: pl.DataFrame = cameras.with_columns(\n",
     "        (-pl.col(\"height\")).alias(\"negative_height\")\n",
     "    )\n",
     "\n",
-    "    return merged\n",
+    "    # TODO: Filter out monochrome images\n",
+    "    cameras: pl.DataFrame = cameras.filter(pl.col(\"camera_label\").str.ends_with(\"LC16\"))\n",
+    "    cameras: pl.DataFrame = cameras.sort(by=\"camera_label\")\n",
+    "\n",
+    "    # Add file path\n",
+    "    cameras: pl.DataFrame = cameras.with_columns(\n",
+    "        pl.concat_str([\n",
+    "            pl.col(\"camera_label\"),\n",
+    "            pl.lit(config.extension)\n",
+    "        ]).alias(\"image_path\")\n",
+    "    )\n",
+    "\n",
+    "    return cameras\n",
     "\n",
     "\n",
-    "def export_cameras_data_frame(destination: Path, cameras: CameraGroup) -> None:\n",
+    "def export_cameras_data_frame(config: Config) -> None:\n",
     "    \"\"\"Export cameras to a data frame.\"\"\"\n",
+    "\n",
+    "    target_group: CameraGroupID = retrieve_target_group(config.target)\n",
+    "    camera_group: CameraGroup = metashape.camera_services.retrieve_camera_group(target_group).unwrap()\n",
     "\n",
     "    # TODO: Add config to select base / sorting / interpolation\n",
     "\n",
     "    # TODO: Create data frame for camera - attributes - identifiers\n",
-    "    processed_cameras: pl.DataFrame = process_camera_data(cameras)\n",
+    "    processed_cameras: pl.DataFrame = process_camera_data(camera_group, config)\n",
     "\n",
     "    logger.info(\"\")\n",
     "    logger.info(f\"Shape:   {processed_cameras.shape}\")\n",
     "    logger.info(f\"Columns: {processed_cameras.columns}\")\n",
     "    logger.info(\"\")\n",
     "\n",
-    "    write_result: Result = write_data_frame(destination, processed_cameras)\n",
+    "    write_result: Result = write_data_frame(config.destination, processed_cameras)\n",
     "    match write_result:\n",
     "        case Ok(path):\n",
     "            logger.info(f\"Wrote processed cameras: {path}\")\n",
@@ -164,24 +219,28 @@
     "    \"\"\"Main function.\"\"\"\n",
     "\n",
     "    # r23685bc_20100605_021022, r23685bc_20120530_233021, r23685bc_20140616_225022\n",
-    "    GROUP_LABEL: str = \"r23685bc_20120530_233021\"\n",
+    "    GROUP_LABEL: str = \"r23685bc_20140616_225022\"\n",
     "    PROJECT: Path = Path(\n",
     "        \"/data/kingston_snv_01/acfr_metashape_projects_dev/r23685bc_lite_metadata.psz\"\n",
     "    )\n",
-    "    DESTINATION: Path = Path(\n",
-    "        f\"/data/kingston_snv_01/georef_semantics_test/{GROUP_LABEL}_aligned_cameras.csv\"\n",
-    "    )\n",
+    "    OUTPUT_DIR: Path = Path(\"/data/kingston_snv_01/georef_semantics_test\")\n",
+    "    IMAGE_EXTENSION = \".png\"\n",
+    "\n",
+    "    configs: list[Config] = [\n",
+    "        Config(\"r23685bc_20100605_021022\", Path(f\"{OUTPUT_DIR}/r23685bc_20100605_021022_cameras_grayworld.csv\"), extension=\".png\"),\n",
+    "        Config(\"r23685bc_20100605_021022\", Path(f\"{OUTPUT_DIR}/r23685bc_20100605_021022_cameras_debayered.csv\"), extension=\".tiff\"),\n",
+    "        Config(\"r23685bc_20120530_233021\", Path(f\"{OUTPUT_DIR}/r23685bc_20120530_233021_cameras_grayworld.csv\"), extension=\".png\"),\n",
+    "        Config(\"r23685bc_20120530_233021\", Path(f\"{OUTPUT_DIR}/r23685bc_20120530_233021_cameras_debayered.csv\"), extension=\".tiff\"),\n",
+    "        Config(\"r23685bc_20140616_225022\", Path(f\"{OUTPUT_DIR}/r23685bc_20140616_225022_cameras_grayworld.csv\"), extension=\".png\"),\n",
+    "        Config(\"r23685bc_20140616_225022\", Path(f\"{OUTPUT_DIR}/r23685bc_20140616_225022_cameras_debayered.csv\"), extension=\".tiff\"),\n",
+    "    ]\n",
     "\n",
     "    load_result: Result = metashape.load_project(PROJECT)\n",
     "    if load_result.is_err():\n",
     "        logger.error(load_result.err())\n",
     "\n",
-    "    target: CameraGroupID = retrieve_target_group(GROUP_LABEL)\n",
-    "    camera_group: CameraGroup = metashape.camera_services.retrieve_camera_group(\n",
-    "        target\n",
-    "    ).unwrap()\n",
-    "\n",
-    "    export_cameras_data_frame(DESTINATION, camera_group)\n",
+    "    for config in configs:\n",
+    "        export_cameras_data_frame(config)\n",
     "\n",
     "\n",
     "# Invoke main function\n",
