Update retrieval of stereo group from backend. Add notebook for visualizing stereo geometry. Add image composite factory to tasks package. Update various image processing functions to new image type.

--- a/notebooks/export_camera_data_frame.ipynb
+++ b/notebooks/export_camera_data_frame.ipynb
@@ -65,9 +65,6 @@
     "CameraGroupID = CameraGroup.Identifier\n",
     "\n",
     "\n",
-    "\n",
-    "\n",
-    "\n",
     "def tabulate_camera_identifiers(\n",
     "    identifiers: list[Camera.Identifier],\n",
     ") -> pl.DataFrame:\n",
@@ -134,7 +131,7 @@
     "    target: str\n",
     "    destination: Path\n",
     "    extension: str\n",
-    "    \n",
+    "\n",
     "\n",
     "def process_camera_data(cameras: CameraGroup, config: Config) -> pl.DataFrame:\n",
     "    \"\"\"Process camera data from various sources.\"\"\"\n",
@@ -166,15 +163,16 @@
     "    )\n",
     "\n",
     "    # TODO: Filter out monochrome images\n",
-    "    cameras: pl.DataFrame = cameras.filter(pl.col(\"camera_label\").str.ends_with(\"LC16\"))\n",
+    "    cameras: pl.DataFrame = cameras.filter(\n",
+    "        pl.col(\"camera_label\").str.ends_with(\"LC16\")\n",
+    "    )\n",
     "    cameras: pl.DataFrame = cameras.sort(by=\"camera_label\")\n",
     "\n",
     "    # Add file path\n",
     "    cameras: pl.DataFrame = cameras.with_columns(\n",
-    "        pl.concat_str([\n",
-    "            pl.col(\"camera_label\"),\n",
-    "            pl.lit(config.extension)\n",
-    "        ]).alias(\"image_path\")\n",
+    "        pl.concat_str([pl.col(\"camera_label\"), pl.lit(config.extension)]).alias(\n",
+    "            \"image_path\"\n",
+    "        )\n",
     "    )\n",
     "\n",
     "    return cameras\n",
@@ -184,7 +182,9 @@
     "    \"\"\"Export cameras to a data frame.\"\"\"\n",
     "\n",
     "    target_group: CameraGroupID = retrieve_target_group(config.target)\n",
-    "    camera_group: CameraGroup = metashape.camera_services.retrieve_camera_group(target_group).unwrap()\n",
+    "    camera_group: CameraGroup = metashape.camera_services.retrieve_camera_group(\n",
+    "        target_group\n",
+    "    ).unwrap()\n",
     "\n",
     "    # TODO: Add config to select base / sorting / interpolation\n",
     "\n",
@@ -196,7 +196,9 @@
     "    logger.info(f\"Columns: {processed_cameras.columns}\")\n",
     "    logger.info(\"\")\n",
     "\n",
-    "    write_result: Result = write_data_frame(config.destination, processed_cameras)\n",
+    "    write_result: Result = write_data_frame(\n",
+    "        config.destination, processed_cameras\n",
+    "    )\n",
     "    match write_result:\n",
     "        case Ok(path):\n",
     "            logger.info(f\"Wrote processed cameras: {path}\")\n",
@@ -227,12 +229,48 @@
     "    IMAGE_EXTENSION = \".png\"\n",
     "\n",
     "    configs: list[Config] = [\n",
-    "        Config(\"r23685bc_20100605_021022\", Path(f\"{OUTPUT_DIR}/r23685bc_20100605_021022_cameras_grayworld.csv\"), extension=\".png\"),\n",
-    "        Config(\"r23685bc_20100605_021022\", Path(f\"{OUTPUT_DIR}/r23685bc_20100605_021022_cameras_debayered.csv\"), extension=\".tiff\"),\n",
-    "        Config(\"r23685bc_20120530_233021\", Path(f\"{OUTPUT_DIR}/r23685bc_20120530_233021_cameras_grayworld.csv\"), extension=\".png\"),\n",
-    "        Config(\"r23685bc_20120530_233021\", Path(f\"{OUTPUT_DIR}/r23685bc_20120530_233021_cameras_debayered.csv\"), extension=\".tiff\"),\n",
-    "        Config(\"r23685bc_20140616_225022\", Path(f\"{OUTPUT_DIR}/r23685bc_20140616_225022_cameras_grayworld.csv\"), extension=\".png\"),\n",
-    "        Config(\"r23685bc_20140616_225022\", Path(f\"{OUTPUT_DIR}/r23685bc_20140616_225022_cameras_debayered.csv\"), extension=\".tiff\"),\n",
+    "        Config(\n",
+    "            \"r23685bc_20100605_021022\",\n",
+    "            Path(\n",
+    "                f\"{OUTPUT_DIR}/r23685bc_20100605_021022_cameras_grayworld.csv\"\n",
+    "            ),\n",
+    "            extension=\".png\",\n",
+    "        ),\n",
+    "        Config(\n",
+    "            \"r23685bc_20100605_021022\",\n",
+    "            Path(\n",
+    "                f\"{OUTPUT_DIR}/r23685bc_20100605_021022_cameras_debayered.csv\"\n",
+    "            ),\n",
+    "            extension=\".tiff\",\n",
+    "        ),\n",
+    "        Config(\n",
+    "            \"r23685bc_20120530_233021\",\n",
+    "            Path(\n",
+    "                f\"{OUTPUT_DIR}/r23685bc_20120530_233021_cameras_grayworld.csv\"\n",
+    "            ),\n",
+    "            extension=\".png\",\n",
+    "        ),\n",
+    "        Config(\n",
+    "            \"r23685bc_20120530_233021\",\n",
+    "            Path(\n",
+    "                f\"{OUTPUT_DIR}/r23685bc_20120530_233021_cameras_debayered.csv\"\n",
+    "            ),\n",
+    "            extension=\".tiff\",\n",
+    "        ),\n",
+    "        Config(\n",
+    "            \"r23685bc_20140616_225022\",\n",
+    "            Path(\n",
+    "                f\"{OUTPUT_DIR}/r23685bc_20140616_225022_cameras_grayworld.csv\"\n",
+    "            ),\n",
+    "            extension=\".png\",\n",
+    "        ),\n",
+    "        Config(\n",
+    "            \"r23685bc_20140616_225022\",\n",
+    "            Path(\n",
+    "                f\"{OUTPUT_DIR}/r23685bc_20140616_225022_cameras_debayered.csv\"\n",
+    "            ),\n",
+    "            extension=\".tiff\",\n",
+    "        ),\n",
     "    ]\n",
     "\n",
     "    load_result: Result = metashape.load_project(PROJECT)\n",
