--- a/notebooks/export_stereo_geometry.ipynb
+++ b/notebooks/export_stereo_geometry.ipynb
@@ -1,49 +1,6 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f0755b9b-6c17-4266-961c-e7745e3a536c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from pathlib import Path\n",
-    "\n",
-    "import Metashape\n",
-    "\n",
-    "from mynd.backends import metashape as backend\n",
-    "from mynd.utils.log import logger\n",
-    "from mynd.utils.result import Ok, Err, Result"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "b522851c-fe4d-4c3f-a071-9049cce56b65",
-   "metadata": {},
-   "source": [
-    "### Load document into backend"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8bb91025-8106-458e-aa74-815b65916bcc",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "DOCUMENT_PATH: Path = Path(\n",
-    "    \"/data/kingston_snv_01/acfr_revisits_metashape_projects/r23685bc_working_version.psz\"\n",
-    ")\n",
-    "\n",
-    "result: Result[str, str] = backend.load_project(DOCUMENT_PATH)\n",
-    "match result:\n",
-    "    case Ok(message):\n",
-    "        logger.info(message)\n",
-    "    case Err(message):\n",
-    "        logger.error(message)"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "e38e66bd-9cea-412e-8724-63ca29c7cae9",
    "metadata": {},
@@ -53,24 +10,69 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "9511dc8d-2676-4557-8073-88dbc0268668",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Jupyter environment detected. Enabling Open3D WebVisualizer.\n",
+      "[Open3D INFO] WebRTC GUI backend enabled.\n",
+      "[Open3D INFO] WebRTCWindowSystem: HTTP handshake server disabled.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/martin/.cache/pypoetry/virtualenvs/mynd-qzh2EXyG-py3.11/lib/python3.11/site-packages/kornia/feature/lightglue.py:44: FutureWarning: `torch.cuda.amp.custom_fwd(args...)` is deprecated. Please use `torch.amp.custom_fwd(args..., device_type='cuda')` instead.\n",
+      "  @torch.cuda.amp.custom_fwd(cast_inputs=torch.float32)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "LoadProject: path = /data/kingston_snv_01/acfr_metashape_projects_dev/r23m7ms0_lite_with_metadata.psz\n",
+      "loaded project in 18.6325 sec\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001b[0;93m2024-10-20 11:46:27.997425653 [W:onnxruntime:, transformer_memcpy.cc:74 ApplyImpl] 20 Memcpy nodes are added to the graph tf2onnx for CUDAExecutionProvider. It might have negative impact on performance (including unable to run CUDA graph). Set session_options.log_severity_level=1 to see the detail logs before this message.\u001b[m\n",
+      "\u001b[32m2024-10-20 11:46:28.066\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mprepare_task_config\u001b[0m:\u001b[36m41\u001b[0m - \u001b[1mCamera pairs: 2569\u001b[0m\n",
+      "\u001b[32m2024-10-20 11:46:28.066\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mprepare_task_config\u001b[0m:\u001b[36m42\u001b[0m - \u001b[1mImage loaders: 5138\u001b[0m\n",
+      "Estimating stereo geometry...: 100%|████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 2569/2569 [26:50<00:00,  1.60it/s]\n"
+     ]
+    }
+   ],
    "source": [
+    "from pathlib import Path\n",
+    "\n",
+    "import Metashape\n",
+    "\n",
+    "from mynd.backend import metashape as backend\n",
+    "from mynd.utils.log import logger\n",
+    "from mynd.utils.result import Ok, Err, Result\n",
+    "\n",
     "import os\n",
     "\n",
-    "from mynd.collections import CameraGroupIdentifier, StereoCameraGroup\n",
+    "from mynd.collections import CameraGroup, StereoCameraGroup\n",
     "from mynd.backend import metashape as backend\n",
     "from mynd.geometry import load_hitnet\n",
     "from mynd.utils.environment import Environment, load_environment\n",
     "\n",
-    "from mynd.tasks.export_stereo_geometry import (\n",
+    "from mynd.tasks.export_stereo import (\n",
     "    ExportStereoTask,\n",
     "    invoke_stereo_export_task,\n",
     ")\n",
     "\n",
     "GroupID = CameraGroup.Identifier\n",
+    "\n",
     "\n",
     "def prepare_task_config(\n",
     "    identifier: GroupID, stereo_camera: StereoCameraGroup\n",
@@ -89,11 +91,16 @@
     "    RANGE_DIRECTORY: Path = Path(\"/data/kingston_snv_01/acfr_stereo_ranges\")\n",
     "    NORMAL_DIRECTORY: Path = Path(\"/data/kingston_snv_01/acfr_stereo_normals\")\n",
     "\n",
+    "    # NOTE: Debug only!\n",
+    "    logger.info(f\"Camera pairs: {len(stereo_camera.camera_pairs)}\")\n",
+    "    logger.info(f\"Image loaders: {len(stereo_camera.image_loaders)}\")\n",
+    "\n",
     "    config = ExportStereoTask.Config(\n",
     "        range_directory=RANGE_DIRECTORY / Path(f\"{identifier.label}_ranges\"),\n",
     "        normal_directory=NORMAL_DIRECTORY / Path(f\"{identifier.label}_normals\"),\n",
     "        model=model,\n",
     "        calibrations=stereo_camera.calibrations,\n",
+    "        camera_pairs=stereo_camera.camera_pairs,\n",
     "        image_loaders=stereo_camera.image_loaders,\n",
     "    )\n",
     "\n",
@@ -109,13 +116,21 @@
     "def main():\n",
     "    \"\"\"Main function.\"\"\"\n",
     "\n",
-    "    # Since the backend already has a loaded project at this point, \n",
-    "    # we can start extracting data from it\n",
-    "    identifiers: list[GroupID] = backend.get_group_identifiers()\n",
+    "    DOCUMENT_PATH: Path = Path(\n",
+    "        \"/data/kingston_snv_01/acfr_metashape_projects_dev/r23m7ms0_lite_with_metadata.psz\"\n",
+    "    )\n",
+    "\n",
+    "    match backend.load_project(DOCUMENT_PATH):\n",
+    "        case Ok(None):\n",
+    "            pass\n",
+    "        case Err(message):\n",
+    "            logger.error(message)\n",
+    "\n",
+    "    identifiers: list[GroupID] = backend.get_group_identifiers().unwrap()\n",
     "\n",
     "    target: GroupID = identifiers[0]\n",
-    "    \n",
-    "    match backend.get_stereo_cameras(target)\n",
+    "\n",
+    "    match backend.camera_services.retrieve_stereo_cameras(target):\n",
     "        case Ok(stereo_camera_groups):\n",
     "            for stereo_cameras in stereo_camera_groups:\n",
     "                config: ExportStereoTask.Config = prepare_task_config(\n",
