Add stereo geometry module. Add notebook for visualizing stereo geometry. Add image preprocessing to stereo geometry estimation.

--- a/notebooks/sandbox.ipynb
+++ b/notebooks/sandbox.ipynb
@@ -10,128 +10,69 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "26f6bf3a-a9bd-4ec4-8ff2-11550e1fddaa",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001b[32m2024-10-20 18:57:16.272\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mmain\u001b[0m:\u001b[36m27\u001b[0m - \u001b[1mImages: 6562\u001b[0m\n",
+      "\u001b[32m2024-10-20 18:57:16.273\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mmain\u001b[0m:\u001b[36m29\u001b[0m - \u001b[1mDevice: CPU\u001b[0m\n"
+     ]
+    }
+   ],
    "source": [
-    "from collections.abc import Mapping\n",
     "from functools import partial\n",
     "from pathlib import Path\n",
-    "from typing import Callable, TypeVar\n",
     "\n",
+    "import cv2\n",
+    "import onnxruntime as ort\n",
     "import tqdm\n",
     "\n",
     "from mynd.camera import CameraID\n",
-    "from mynd.collections import CameraGroup\n",
-    "from mynd.image import (\n",
-    "    Image,\n",
-    "    ImageType,\n",
-    "    ImageComposite,\n",
-    "    ImageCompositeLoader,\n",
-    ")\n",
+    "from mynd.image import Image, filter_image_clahe\n",
     "from mynd.io import read_image\n",
+    "from mynd.visualization import KeyCode, destroy_all_windows\n",
     "\n",
-    "from mynd.utils.composition import create_composite_builder\n",
-    "from mynd.utils.filesystem import (\n",
-    "    list_directory,\n",
-    "    create_resource,\n",
-    "    Resource,\n",
-    "    ResourceManager,\n",
-    "    create_resource_matcher,\n",
-    ")\n",
+    "from mynd.utils.filesystem import list_directory\n",
     "from mynd.utils.log import logger\n",
     "from mynd.utils.result import Ok, Err, Result\n",
-    "\n",
-    "\n",
-    "IMAGE_PATTERN: str = \"*.tiff\"\n",
-    "\n",
-    "\n",
-    "def create_mockup_cameras() -> CameraGroup:\n",
-    "    \"\"\"Creates a mockup of cameras with corresponding sensors.\"\"\"\n",
-    "\n",
-    "    cameras: list[CameraID] = [\n",
-    "        CameraID(0, \"PR_20100605_030049_596_LC16\"),\n",
-    "        CameraID(1, \"PR_20100605_030049_596_RM16\"),\n",
-    "        CameraID(2, \"PR_20100605_030050_576_LC16\"),\n",
-    "        CameraID(3, \"PR_20100605_030050_576_RM16\"),\n",
-    "        CameraID(4, \"PR_20100605_030051_609_LC16\"),\n",
-    "        CameraID(5, \"PR_20100605_030051_609_RM16\"),\n",
-    "    ]\n",
-    "\n",
-    "    sensors: list[SensorID] = [\n",
-    "        SensorID(0, \"stereo_left\"),\n",
-    "        SensorID(1, \"stereo_right\"),\n",
-    "    ]\n",
-    "\n",
-    "    cameras_to_sensors: dict[CameraID, SensorID] = {\n",
-    "        cameras[0]: sensors[0],\n",
-    "        cameras[1]: sensors[1],\n",
-    "        cameras[2]: sensors[0],\n",
-    "        cameras[3]: sensors[1],\n",
-    "        cameras[4]: sensors[0],\n",
-    "        cameras[5]: sensors[1],\n",
-    "    }\n",
-    "\n",
-    "    raise NotImplementedError\n",
     "\n",
     "\n",
     "def main() -> None:\n",
     "    \"\"\"Main entrypoint.\"\"\"\n",
     "\n",
-    "    DATADIR: Path = Path(\"/home/martin/data\")\n",
-    "\n",
-    "    directories: dict[str, Path] = {\n",
-    "        ImageType.COLOR: DATADIR\n",
-    "        / Path(\"acfr_images_debayered/r23685bc_20100605_021022_debayered\"),\n",
-    "        ImageType.RANGE: DATADIR\n",
-    "        / Path(\"acfr_stereo_ranges/r23685bc_20100605_021022_ranges\"),\n",
-    "        ImageType.NORMAL: DATADIR\n",
-    "        / Path(\"acfr_stereo_normals/r23685bc_20100605_021022_normals\"),\n",
-    "    }\n",
-    "\n",
-    "    tags: dict[ImageType, list[str]] = {\n",
-    "        ImageType.COLOR: [\"image\", \"color\"],\n",
-    "        ImageType.RANGE: [\"image\", \"range\"],\n",
-    "        ImageType.NORMAL: [\"image\", \"normal\"],\n",
-    "    }\n",
-    "\n",
-    "    image_types: list[ImageType] = list(directories.keys())\n",
-    "\n",
-    "    # Step 1 - Collect image resources\n",
-    "    image_manager: ResourceManager = collect_image_resources(directories, tags)\n",
-    "\n",
-    "    # Step 2 - Retrieve image resources by type\n",
-    "    query_results: dict[ImageType, list[Resource]] = {\n",
-    "        image_type: image_manager.query_tags(tags.get(image_type))\n",
-    "        for image_type in image_types\n",
-    "    }\n",
-    "\n",
-    "    log_image_queries(query_results)\n",
-    "\n",
-    "    # Step 3 - Match image resources to create composites\n",
-    "    matcher = create_resource_matcher()\n",
-    "    matches: list[ComponentMatch] = matcher(query_results)\n",
-    "\n",
-    "    # Step 4 - Create loaders from the matched resources\n",
-    "    builder = create_composite_builder(\n",
-    "        factory=create_image_composite_loader,\n",
-    "        labeller=label_image_composite,\n",
+    "    DIRECTORY: Path = Path(\n",
+    "        \"/data/kingston_snv_01/acfr_images_grayworld/r23m7ms0_20140616_044549_grayworld\"\n",
     "    )\n",
+    "    PATTERN: str = \"*.png\"\n",
     "\n",
-    "    image_loaders: dict[str, ImageCompositeLoader] = builder(matches)\n",
+    "    image_files: list[Path] = sorted(list_directory(DIRECTORY, PATTERN))\n",
     "\n",
-    "    # Map image loaders to cameras\n",
-    "    filtered_loaders: dict[CameraID, ImageCompositeLoader] = {\n",
-    "        camera: image_loaders.get(camera)\n",
-    "        for camera in cameras\n",
-    "        if camera.label in image_loaders\n",
-    "    }\n",
+    "    logger.info(f\"Device: {ort.get_device()}\")\n",
+    "    logger.info(f\"Images: {len(image_files)}\")\n",
     "\n",
-    "    # TODO: Map loaders to cameras\n",
-    "    logger.info(f\"Cameras: {len(cameras)}\")\n",
-    "    logger.info(f\"Loaders: {len(image_loaders)}\")\n",
-    "    logger.info(f\"Filtered loaders: {len(filtered_loaders)}\")\n",
+    "    # Test this function\n",
+    "    # filter_image_clahe\n",
+    "    for image_file in image_files:\n",
+    "        image: Image = read_image(image_file).unwrap()\n",
+    "\n",
+    "        processed_image: Image = filter_image_clahe(image, size=10, clip=6.0)\n",
+    "\n",
+    "        cv2.imshow(\"Filtered\", processed_image.to_array())\n",
+    "\n",
+    "        key: KeyCode = KeyCode(cv2.waitKey(0))\n",
+    "\n",
+    "        match key:\n",
+    "            case KeyCode.ESC:\n",
+    "                destroy_all_windows()\n",
+    "                return\n",
+    "            case KeyCode.SPACE:\n",
+    "                continue\n",
+    "            case _:\n",
+    "                pass\n",
     "\n",
     "\n",
     "# INVOKE MAIN\n",
