--- a/notebooks/export_stereo_geometry.ipynb
+++ b/notebooks/export_stereo_geometry.ipynb
@@ -10,60 +10,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "9511dc8d-2676-4557-8073-88dbc0268668",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Jupyter environment detected. Enabling Open3D WebVisualizer.\n",
-      "[Open3D INFO] WebRTC GUI backend enabled.\n",
-      "[Open3D INFO] WebRTCWindowSystem: HTTP handshake server disabled.\n"
-     ]
-    },
-    {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/martin/.cache/pypoetry/virtualenvs/mynd-qzh2EXyG-py3.11/lib/python3.11/site-packages/kornia/feature/lightglue.py:44: FutureWarning: `torch.cuda.amp.custom_fwd(args...)` is deprecated. Please use `torch.amp.custom_fwd(args..., device_type='cuda')` instead.\n",
-      "  @torch.cuda.amp.custom_fwd(cast_inputs=torch.float32)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "LoadProject: path = /data/kingston_snv_01/acfr_metashape_projects_dev/r23m7ms0_lite_with_metadata.psz\n",
-      "loaded project in 22.8026 sec\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\u001b[0;93m2024-10-20 20:14:57.352679745 [W:onnxruntime:, transformer_memcpy.cc:74 ApplyImpl] 20 Memcpy nodes are added to the graph tf2onnx for CUDAExecutionProvider. It might have negative impact on performance (including unable to run CUDA graph). Set session_options.log_severity_level=1 to see the detail logs before this message.\u001b[m\n",
-      "\u001b[32m2024-10-20 20:14:57.424\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mprepare_task_config\u001b[0m:\u001b[36m58\u001b[0m - \u001b[1mCamera pairs: 3733\u001b[0m\n",
-      "\u001b[32m2024-10-20 20:14:57.424\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mprepare_task_config\u001b[0m:\u001b[36m59\u001b[0m - \u001b[1mImage loaders: 7466\u001b[0m\n",
-      "\u001b[32m2024-10-20 20:14:57.425\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mmynd.geometry.stereo_rectification\u001b[0m:\u001b[36m_compute_rectified_calibrations\u001b[0m:\u001b[36m179\u001b[0m - \u001b[1m[[1.80545996e+03 0.00000000e+00 6.78856567e+02]\n",
-      " [0.00000000e+00 1.77432092e+03 5.23316162e+02]\n",
-      " [0.00000000e+00 0.00000000e+00 1.00000000e+00]]\u001b[0m\n"
-     ]
-    },
-    {
-     "ename": "NotImplementedError",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNotImplementedError\u001b[0m                       Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[1], line 145\u001b[0m\n\u001b[1;32m    141\u001b[0m             logger\u001b[38;5;241m.\u001b[39merror(message)\n\u001b[1;32m    144\u001b[0m \u001b[38;5;66;03m# ---------- Invoke main function ----------\u001b[39;00m\n\u001b[0;32m--> 145\u001b[0m \u001b[43mmain\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
-      "Cell \u001b[0;32mIn[1], line 134\u001b[0m, in \u001b[0;36mmain\u001b[0;34m()\u001b[0m\n\u001b[1;32m    132\u001b[0m \u001b[38;5;28;01mmatch\u001b[39;00m backend\u001b[38;5;241m.\u001b[39mcamera_services\u001b[38;5;241m.\u001b[39mretrieve_stereo_cameras(target):\n\u001b[1;32m    133\u001b[0m     \u001b[38;5;28;01mcase\u001b[39;00m Ok(stereo_camera_groups):\n\u001b[0;32m--> 134\u001b[0m         \u001b[43mbatch_stereo_export\u001b[49m\u001b[43m(\u001b[49m\n\u001b[1;32m    135\u001b[0m \u001b[43m            \u001b[49m\u001b[43mtarget\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\n\u001b[1;32m    136\u001b[0m \u001b[43m            \u001b[49m\u001b[43mstereo_camera_groups\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m    137\u001b[0m \u001b[43m            \u001b[49m\u001b[43mrange_directory\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mRANGE_DIRECTORY\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m    138\u001b[0m \u001b[43m            \u001b[49m\u001b[43mnormal_directory\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mNORMAL_DIRECTORY\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m    139\u001b[0m \u001b[43m        \u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    140\u001b[0m     \u001b[38;5;28;01mcase\u001b[39;00m Err(message):\n\u001b[1;32m    141\u001b[0m         logger\u001b[38;5;241m.\u001b[39merror(message)\n",
-      "Cell \u001b[0;32mIn[1], line 98\u001b[0m, in \u001b[0;36mbatch_stereo_export\u001b[0;34m(target, stereo_groups, range_directory, normal_directory)\u001b[0m\n\u001b[1;32m     91\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m stereo_group \u001b[38;5;129;01min\u001b[39;00m stereo_groups:\n\u001b[1;32m     93\u001b[0m     config: ExportStereoTask\u001b[38;5;241m.\u001b[39mConfig \u001b[38;5;241m=\u001b[39m prepare_task_config(\n\u001b[1;32m     94\u001b[0m         target, stereo_group, range_directory, normal_directory\n\u001b[1;32m     95\u001b[0m     )\n\u001b[1;32m     97\u001b[0m     result: Result[ExportStereoTask\u001b[38;5;241m.\u001b[39mResult, \u001b[38;5;28mstr\u001b[39m] \u001b[38;5;241m=\u001b[39m (\n\u001b[0;32m---> 98\u001b[0m         \u001b[43minvoke_stereo_export_task\u001b[49m\u001b[43m(\u001b[49m\u001b[43mconfig\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     99\u001b[0m     )\n",
-      "File \u001b[0;32m~/dev/mynd/src/mynd/tasks/export_stereo/export_stereo_geometry.py:193\u001b[0m, in \u001b[0;36minvoke_stereo_export_task\u001b[0;34m(config)\u001b[0m\n\u001b[1;32m    188\u001b[0m \u001b[38;5;250m\u001b[39m\u001b[38;5;124;03m\"\"\"Invoke a stereo export task.\"\"\"\u001b[39;00m\n\u001b[1;32m    190\u001b[0m \u001b[38;5;66;03m# TODO: Add config validation\u001b[39;00m\n\u001b[1;32m    191\u001b[0m \n\u001b[1;32m    192\u001b[0m \u001b[38;5;66;03m# Compute stereo range and normal maps and export\u001b[39;00m\n\u001b[0;32m--> 193\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mexport_stereo_geometry\u001b[49m\u001b[43m(\u001b[49m\u001b[43mconfig\u001b[49m\u001b[43m)\u001b[49m\n",
-      "File \u001b[0;32m~/dev/mynd/src/mynd/tasks/export_stereo/export_stereo_geometry.py:68\u001b[0m, in \u001b[0;36mexport_stereo_geometry\u001b[0;34m(config)\u001b[0m\n\u001b[1;32m     62\u001b[0m task_result: ExportStereoTask\u001b[38;5;241m.\u001b[39mResult \u001b[38;5;241m=\u001b[39m ExportStereoTask\u001b[38;5;241m.\u001b[39mResult()\n\u001b[1;32m     64\u001b[0m rectification: StereoRectificationResult \u001b[38;5;241m=\u001b[39m compute_stereo_rectification(\n\u001b[1;32m     65\u001b[0m     config\u001b[38;5;241m.\u001b[39mcalibrations\n\u001b[1;32m     66\u001b[0m )\n\u001b[0;32m---> 68\u001b[0m \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mNotImplementedError\u001b[39;00m\n\u001b[1;32m     70\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m camera_pair \u001b[38;5;129;01min\u001b[39;00m tqdm\u001b[38;5;241m.\u001b[39mtqdm(\n\u001b[1;32m     71\u001b[0m     config\u001b[38;5;241m.\u001b[39mcamera_pairs, desc\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mEstimating stereo geometry...\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m     72\u001b[0m ):\n\u001b[1;32m     74\u001b[0m     loaders: Pair[ImageLoader] \u001b[38;5;241m=\u001b[39m Pair(\n\u001b[1;32m     75\u001b[0m         config\u001b[38;5;241m.\u001b[39mimage_loaders\u001b[38;5;241m.\u001b[39mget(camera_pair\u001b[38;5;241m.\u001b[39mfirst),\n\u001b[1;32m     76\u001b[0m         config\u001b[38;5;241m.\u001b[39mimage_loaders\u001b[38;5;241m.\u001b[39mget(camera_pair\u001b[38;5;241m.\u001b[39msecond),\n\u001b[1;32m     77\u001b[0m     )\n",
-      "\u001b[0;31mNotImplementedError\u001b[0m: "
+      "\u001b[32m2024-10-21 16:29:24.998\u001b[0m | \u001b[31m\u001b[1mERROR   \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mmain\u001b[0m:\u001b[36m142\u001b[0m - \u001b[31m\u001b[1mbackend already has a loaded project\u001b[0m\n",
+      "\u001b[32m2024-10-21 16:29:25.004\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mmain\u001b[0m:\u001b[36m150\u001b[0m - \u001b[1mTarget deployment: CameraGroup.Identifier(key=0, label='r29mrd5h_20090612_225306')\u001b[0m\n",
+      "\u001b[0;93m2024-10-21 16:29:25.600194413 [W:onnxruntime:, transformer_memcpy.cc:74 ApplyImpl] 20 Memcpy nodes are added to the graph tf2onnx for CUDAExecutionProvider. It might have negative impact on performance (including unable to run CUDA graph). Set session_options.log_severity_level=1 to see the detail logs before this message.\u001b[m\n",
+      "\u001b[32m2024-10-21 16:29:25.759\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mprepare_task_config\u001b[0m:\u001b[36m69\u001b[0m - \u001b[1m-------------------- Camera calibration 1 --------------------\u001b[0m\n",
+      "\u001b[0;93m2024-10-21 16:29:25.665408705 [W:onnxruntime:, session_state.cc:1166 VerifyEachNodeIsAssignedToAnEp] Some nodes were not assigned to the preferred execution providers which may or may not have an negative impact on performance. e.g. ORT explicitly assigns shape related ops to CPU to improve perf.\u001b[m\n",
+      "\u001b[0;93m2024-10-21 16:29:25.665423938 [W:onnxruntime:, session_state.cc:1168 VerifyEachNodeIsAssignedToAnEp] Rerunning with verbose output on a non-minimal build will show node assignments.\u001b[m\n",
+      "\u001b[32m2024-10-21 16:29:25.766\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mlog_camera_calibration\u001b[0m:\u001b[36m46\u001b[0m - \u001b[1mCamera matrix:  [[1724.628     0.      691.521 ]\n",
+      " [   0.     1724.628   492.9353]\n",
+      " [   0.        0.        1.    ]]\u001b[0m\n",
+      "\u001b[32m2024-10-21 16:29:25.767\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mlog_camera_calibration\u001b[0m:\u001b[36m47\u001b[0m - \u001b[1mDistortion:     [0.1751 0.5306 0.0024 0.0024 0.6779]\u001b[0m\n",
+      "\u001b[32m2024-10-21 16:29:25.771\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mlog_camera_calibration\u001b[0m:\u001b[36m48\u001b[0m - \u001b[1mLocation:       [0. 0. 0.]\u001b[0m\n",
+      "\u001b[32m2024-10-21 16:29:25.772\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mlog_camera_calibration\u001b[0m:\u001b[36m49\u001b[0m - \u001b[1mRotation:       [[1. 0. 0.]\n",
+      " [0. 1. 0.]\n",
+      " [0. 0. 1.]]\u001b[0m\n",
+      "\u001b[32m2024-10-21 16:29:25.773\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mprepare_task_config\u001b[0m:\u001b[36m71\u001b[0m - \u001b[1m-------------------- Camera calibration 2 --------------------\u001b[0m\n",
+      "\u001b[32m2024-10-21 16:29:25.781\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mlog_camera_calibration\u001b[0m:\u001b[36m46\u001b[0m - \u001b[1mCamera matrix:  [[1726.507     0.      691.4263]\n",
+      " [   0.     1726.507   503.5433]\n",
+      " [   0.        0.        1.    ]]\u001b[0m\n",
+      "\u001b[32m2024-10-21 16:29:25.782\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mlog_camera_calibration\u001b[0m:\u001b[36m47\u001b[0m - \u001b[1mDistortion:     [0.1829 0.5267 0.0017 0.0019 0.6678]\u001b[0m\n",
+      "\u001b[32m2024-10-21 16:29:25.783\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mlog_camera_calibration\u001b[0m:\u001b[36m48\u001b[0m - \u001b[1mLocation:       [ 0.07    0.0003 -0.0002]\u001b[0m\n",
+      "\u001b[32m2024-10-21 16:29:25.783\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mlog_camera_calibration\u001b[0m:\u001b[36m49\u001b[0m - \u001b[1mRotation:       [[ 1.      0.0003 -0.0036]\n",
+      " [-0.0003  1.      0.0004]\n",
+      " [ 0.0036 -0.0004  1.    ]]\u001b[0m\n",
+      "\u001b[32m2024-10-21 16:29:25.784\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mprepare_task_config\u001b[0m:\u001b[36m73\u001b[0m - \u001b[1m\u001b[0m\n",
+      "\u001b[32m2024-10-21 16:29:25.784\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mprepare_task_config\u001b[0m:\u001b[36m75\u001b[0m - \u001b[1mCamera pairs: 6280\u001b[0m\n",
+      "\u001b[32m2024-10-21 16:29:25.785\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mprepare_task_config\u001b[0m:\u001b[36m76\u001b[0m - \u001b[1mImage loaders: 12560\u001b[0m\n",
+      "Estimating stereo geometry...:  95%|████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████      | 5993/6280 [1:58:21<04:43,  1.01it/s]"
      ]
     }
    ],
@@ -73,10 +54,11 @@
     "from pathlib import Path\n",
     "from typing import Callable\n",
     "\n",
-    "import Metashape\n",
+    "# import Metashape\n",
     "import numpy as np\n",
     "\n",
     "from mynd.backend import metashape as backend\n",
+    "from mynd.camera import CameraCalibration\n",
     "from mynd.collections import CameraGroup, StereoCameraGroup\n",
     "from mynd.geometry import HitnetModel, load_hitnet\n",
     "from mynd.image import Image, filter_image_clahe\n",
@@ -108,6 +90,16 @@
     "    return disparity\n",
     "\n",
     "\n",
+    "def log_camera_calibration(calibration: CameraCalibration) -> None:\n",
+    "    \"\"\"Logs a camera calibration.\"\"\"\n",
+    "    # TODO: Change numpy precision output\n",
+    "    with np.printoptions(precision=4, suppress=True, threshold=5):\n",
+    "        logger.info(f\"Camera matrix:  {calibration.camera_matrix}\")\n",
+    "        logger.info(f\"Distortion:     {calibration.distortion}\")\n",
+    "        logger.info(f\"Location:       {calibration.location}\")\n",
+    "        logger.info(f\"Rotation:       {calibration.rotation}\")\n",
+    "\n",
+    "\n",
     "def prepare_task_config(\n",
     "    identifier: GroupID,\n",
     "    stereo_camera: StereoCameraGroup,\n",
@@ -119,16 +111,27 @@
     "\n",
     "    environment: Environment = load_environment().unwrap()\n",
     "\n",
-    "    model: HitnetModel = load_hitnet(\n",
+    "    disparity_estimator: HitnetModel = load_hitnet(\n",
     "        environment.resource_directory\n",
-    "        / Path(\"hitnet_models/hitnet_eth3d_720x1280.onnx\")\n",
+    "        / Path(\"hitnet_models/hitnet_eth3d_480x640.onnx\")\n",
     "    ).unwrap()\n",
     "\n",
     "    # NOTE: Debug only!\n",
+    "    logger.info(\n",
+    "        \"-------------------- Camera calibration 1 --------------------\"\n",
+    "    )\n",
+    "    log_camera_calibration(stereo_camera.calibrations.first)\n",
+    "    logger.info(\n",
+    "        \"-------------------- Camera calibration 2 --------------------\"\n",
+    "    )\n",
+    "    log_camera_calibration(stereo_camera.calibrations.second)\n",
+    "    logger.info(\"\")\n",
+    "\n",
     "    logger.info(f\"Camera pairs: {len(stereo_camera.camera_pairs)}\")\n",
     "    logger.info(f\"Image loaders: {len(stereo_camera.image_loaders)}\")\n",
     "\n",
-    "    clahe_filter = create_clahe_filter(clip=6.0, size=10)\n",
+    "    # TODO: Tune\n",
+    "    clahe_filter = create_clahe_filter(clip=10.0, size=20)\n",
     "\n",
     "    config = ExportStereoTask.Config(\n",
     "        range_directory=range_directory / Path(f\"{identifier.label}_ranges\"),\n",
@@ -137,9 +140,9 @@
     "        camera_pairs=stereo_camera.camera_pairs,\n",
     "        image_loaders=stereo_camera.image_loaders,\n",
     "        # Processors\n",
-    "        disparity_estimator=model,\n",
-    "        image_filter=clahe_filter,\n",
-    "        disparity_filter=filter_disparity_map,\n",
+    "        disparity_estimator=disparity_estimator,\n",
+    "        image_filter=None,\n",
+    "        disparity_filter=None,\n",
     "    )\n",
     "\n",
     "    # Create export directories if they do not exist\n",
@@ -173,18 +176,17 @@
     "    \"\"\"Main function.\"\"\"\n",
     "\n",
     "    DOCUMENT_PATH: Path = Path(\n",
-    "        \"/data/kingston_snv_01/acfr_metashape_projects_dev/r23m7ms0_lite_with_metadata.psz\"\n",
+    "        \"/data/kingston_snv_01/acfr_metashape_projects_dev/r29mrd5h_lite_with_metadata.psz\"\n",
     "    )\n",
     "\n",
-    "    RANGE_DIRECTORY: Path = Path(\"/data/kingston_snv_01/acfr_stereo_ranges\")\n",
-    "    NORMAL_DIRECTORY: Path = Path(\"/data/kingston_snv_01/acfr_stereo_normals\")\n",
+    "    RANGE_DIRECTORY: Path = Path(\"/data/kingston_snv_01/stereo_test/ranges\")\n",
+    "    NORMAL_DIRECTORY: Path = Path(\"/data/kingston_snv_01/stereo_test/normals\")\n",
     "\n",
-    "    DEPLOYMENT: str = \"r23m7ms0_20120601_070118\"\n",
+    "    DEPLOYMENT: str = \"r29mrd5h_20090612_225306\"\n",
     "\n",
-    "    # r23685bc_lite_metadata.psz\n",
+    "    # r29mrd5h_20090612_225306, r29mrd5h_20090613_100254, r29mrd5h_20110612_033752, r29mrd5h_20130611_002419\n",
+    "    # qdch0ftq_20100428_020202, qdch0ftq_20110415_020103, qdch0ftq_20120430_002423\n",
     "    # r23685bc_20100605_021022, r23685bc_20120530_233021, r23685bc_20140616_225022\n",
-    "\n",
-    "    # r23m7ms0_lite_with_metadata.psz\n",
     "    # r23m7ms0_20100606_001908, r23m7ms0_20120601_070118, r23m7ms0_20140616_044549\n",
     "\n",
     "    match backend.load_project(DOCUMENT_PATH):\n",
@@ -198,6 +200,8 @@
     "    }\n",
     "\n",
     "    target: GroupID = groups.get(DEPLOYMENT)\n",
+    "\n",
+    "    logger.info(f\"Target deployment: {target}\")\n",
     "\n",
     "    match backend.camera_services.retrieve_stereo_cameras(target):\n",
     "        case Ok(stereo_camera_groups):\n",
